#46 - Update App component to include menu for all routes and modify gome style

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -14,10 +14,11 @@
   background-attachment: fixed;
   background-color: rgba(0, 0, 0, 0.5);
   position: relative;
+  color: white;
 
   h1 {
     white-space: nowrap;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     font-size: 3rem;
     opacity: 0;
     transform: translate(-50%, -50%);
