#31 - Create add tariff form and add button to admin page

--- a/src/components/location.scss
+++ b/src/components/location.scss
@@ -16,7 +16,8 @@
 
 input[type="number"],
 input[type="email"],
-input[type="text"] {
+input[type="text"],
+select {
   padding: 10px;
   border: 1px solid #65835e;
   border-radius: 3px;
